--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </a>
         </div>
         <div class="projects">
-            <a href="Catalogo Videojuegos/index.html">
+            <a href="Mentalista/index.html">
                 <img src="prueba.jpg" alt="prueba">
             </a>
         </div>
