--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
     </div>
     <div class="container">
         <div class="projects">
-            <a href="Catalogo Videojuegos/index.html">
-                <img src="prueba.jpg" alt="prueba">
-            </a>
-        </div>
-        <div class="projects">
-            <a href="Conversor monedas/">
-                <img src="prueba.jpg" alt="prueba">
+            <a href="Conversor monedas/index.html">
+                <img src="imgConversor.JPG" alt="conversor">
             </a>
         </div>
         <div class="projects">
             <a href="Mentalista/index.html">
-                <img src="prueba.jpg" alt="prueba">
+                <img src="imgMentalista.JPG" alt="mentalista">
+            </a>
+        </div>
+        <div class="projects">
+            <a href="Catalogo Videojuegos/index.html">
+                <img src="imgCatalogo.JPG" alt="catalogo">
             </a>
         </div>
     </div>
