--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">    
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -15,7 +18,7 @@
         <h2>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
             Minus debitis dolore saepe. Suscipit rem in cumque expedita optio <br>
-            commodi minima repellendus, non veniam, facilis est quidem! Accusantium, <br>
+            commodi minima repellendus, nquidem! Accusantium, <br>
             optio! Molestias, quisquam.<br>
         </h2>
     </div>
@@ -24,17 +27,31 @@
             <a href="Conversor monedas/index.html">
                 <img src="imgConversor.JPG" alt="conversor">
             </a>
+            <div class="info" onclick="redirigirConversor()">
+                <h3>Conversor de monedas</h3>
+                <p>asgdhasgdjasghdjsgadjghasdjasgdg</p>
+            </div>
         </div>
         <div class="projects">
             <a href="Mentalista/index.html">
                 <img src="imgMentalista.JPG" alt="mentalista">
             </a>
+            <div class="info" onclick="redirigirMentalista()">
+                <h3>Conversor de monedas</h3>
+                <p>asgdhasgdjasghdjsgadjghasdjasgdg</p>
+            </div>
         </div>
         <div class="projects">
             <a href="Catalogo Videojuegos/index.html">
                 <img src="imgCatalogo.JPG" alt="catalogo">
             </a>
+            <div class="info" onclick="redirigirCatalogo()">
+                <h3>Conversor de monedas</h3>
+                <p>asgdhasgdjasghdjsgadjghasdjasgdg</p>
+            </div>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
