--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             </a>
             <div class="info" onclick="redirigirConversor()">
                 <h3>Conversor de monedas</h3>
-                <p>asgdhasgdjasghdjsgadjghasdjasgdg</p>
+                <p>Pagina web con el objetivo de ingresar una cantidad de dolares y 
+                    convertilo en pesos mexicanos o bitcoin</p>
             </div>
         </div>
         <div class="projects">
@@ -37,8 +38,9 @@
                 <img src="imgMentalista.JPG" alt="mentalista">
             </a>
             <div class="info" onclick="redirigirMentalista()">
-                <h3>Conversor de monedas</h3>
-                <p>asgdhasgdjasghdjsgadjghasdjasgdg</p>
+                <h3>Mentalista</h3>
+                <p>Juego sencillo que consiste en adivinar el numero secreto entre el 1 y el 
+                    100</p>
             </div>
         </div>
         <div class="projects">
@@ -46,8 +48,9 @@
                 <img src="imgCatalogo.JPG" alt="catalogo">
             </a>
             <div class="info" onclick="redirigirCatalogo()">
-                <h3>Conversor de monedas</h3>
-                <p>asgdhasgdjasghdjsgadjghasdjasgdg</p>
+                <h3>Catalogo de Videojuegos</h3>
+                <p>Catalogo de videojuegos con capacidad de insertar mas videojuegos con sus 
+                    trailers de youtube</p>
             </div>
         </div>
     </div>
