--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -16,10 +17,10 @@
             Proyectos de la Inmersión dev
         </h1>
         <h2>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
-            Minus debitis dolore saepe. Suscipit rem in cumque expedita optio <br>
-            commodi minima repellendus, nquidem! Accusantium, <br>
-            optio! Molestias, quisquam.<br>
+            Aqui se encuentran los proyectos que realice en la Inmersion dev de Alura. <br>
+            Un pequeño curso de Javascript donde se nos enseño lo basico de JS<br>
+            Con mis conocimientos previos de CSSS y HTML pude mejorar y recopilar 
+            los proyectos en esta pagina web <br>
         </h2>
     </div>
     <div class="container">
