--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="info" onclick="redirigirConversor()">
                 <h3>Conversor de monedas</h3>
                 <p>Pagina web con el objetivo de ingresar una cantidad de dolares y 
-                    convertilo en pesos mexicanos o bitcoin</p>
+                    convertirlo en pesos mexicanos o bitcoin</p>
             </div>
         </div>
         <div class="projects">
